posiGen_FullsendBox/src/objects/Array__c.object
<CustomObject>
    <fields>
        <fullName>Array_Rating_for_Rollup_kW__c</fullName>
        <inlineHelpText>This is used to store the array rating in a manner that it can be rolled up to the Project Level to get a system rating.</inlineHelpText>
        <label>Array Rating for Rollup (kW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_Rating_kW__c</fullName>
        <inlineHelpText>Number of Modules x Module Rating</inlineHelpText>
        <label>Array Rating (kW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Array_Type__c</fullName>
        <label>Array Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed (roof mount)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed (open rack)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-Axis Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Axis Tracking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <label>Azimuth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocusSystemUploadFiles_LatestDPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocusSystemUploadFiles_LatestDPR</label>
        <referenceTo>Data_Processing_Request__c</referenceTo>
        <relationshipLabel>Arrays</relationshipLabel>
        <relationshipName>Arrays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocusUploadFile_CreatedOn__c</fullName>
        <formula>LocusSystemUploadFiles_LatestDPR__r.Actual_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LocusUploadFile_CreatedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Locus_Registered_Date__c</fullName>
        <description>Date registered in Locus</description>
        <label>Locus Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locus_Row_Id__c</fullName>
        <description>Row ID of the uploaded Locus registration file</description>
        <inlineHelpText>Row ID of the uploaded Locus registration file</inlineHelpText>
        <label>Locus Row Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Rating__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Rating (W)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Modules__c</fullName>
        <label># of Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Model_Rating__c</fullName>
        <formula>Panel_Model__r.Rating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel Model Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Serialized_Item__c.Item_Group__c</field>
                <operation>equals</operation>
                <value>Panels</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Serialized_Item__c</referenceTo>
        <relationshipLabel>Arrays</relationshipLabel>
        <relationshipName>Arrays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Array__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Planned Array related to this installed System Array</description>
        <inlineHelpText>Planned Array related to this installed System Array</inlineHelpText>
        <label>Planned Array</label>
        <referenceTo>Planned_Arrays__c</referenceTo>
        <relationshipLabel>Arrays</relationshipLabel>
        <relationshipName>Arrays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Number_of_Modules__c</fullName>
        <label>Planned # of Modules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Arrays</relationshipLabel>
        <relationshipName>Arrays</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipLabel>Arrays</relationshipLabel>
        <relationshipName>Arrays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tilt__c</fullName>
        <label>Tilt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yield_kWh_yr__c</fullName>
        <label>Yield (kWh/yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Array</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>System__c</columns>
        <columns>Planned_Array__c</columns>
        <columns>Locus_Registered_Date__c</columns>
        <columns>LocusSystemUploadFiles_LatestDPR__c</columns>
        <columns>LocusUploadFile_CreatedOn__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Array Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arrays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>